--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">GreenstoneCS </h1>
-      <h2 class="project-tagline"></h2>
+      <h1 class="project-name">Greenstone Consulting</h1>
+      <h2 class="project-tagline">Cost Effective. Results driven.</h2>
     </section>
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GreenstoneCS</h3>
+          <a id="welcome-to-github-pages"
+              class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+                <span class="octicon octicon-link"></span>
+          </a>Welcome to GreenstoneCS</h3>
  
+     
 
       <footer class="site-footer">
-        <span class="site-footer-credits">GreenstoneCS LLC. - 2013 - 2015  </span>
+        <span class="site-footer-credits">GreenstoneCS LLC. - 2018</span>
       </footer>
 
     </section>
@@ -39,4 +43,3 @@
 
   </body>
 </html>
-
